[BM-92] :adhesive_bandage: UTF8 상수로 변경