@@ -6,6 +6,7 @@ import static org.apache.logging.log4j.util.Strings.*;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
@@ -82,11 +83,7 @@ public class JwtAuthenticationFilter extends GenericFilterBean {
 
     if (isNotEmpty(token)) {
       log.debug("Jwt authorization api detected: {}", token);
-      try {
-        return URLDecoder.decode(token, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        log.error(e.getMessage(), e);
-      }
+      return URLDecoder.decode(token, StandardCharsets.UTF_8);
     }
 
     return null;
